--- a/React/kh-sample-react/src/App.css
+++ b/React/kh-sample-react/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.title-name {
+  background-color: lightgray;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
