--- a/React/kh-sample-react/src/App.css
+++ b/React/kh-sample-react/src/App.css
@@ -40,3 +40,12 @@
     transform: rotate(360deg);
   }
 }
+
+/* Table.jsx 파일 css */
+table {
+  border-collapse: collapse;
+}
+th,
+td {
+  border: 1px solid #ccc;
+}
